# haskell-google-translate

./: README.md  haskell-google-translate.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Token.hs
