name:                haskell-google-translate
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-google-translate#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Token
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , http-conduit
                     , regex-posix
                     , utf8-string
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable translate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-google-translate
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite haskell-google-translate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-google-translate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-google-translate
